# unikey

./: .gitignore  CMakeLists.txt  README.md  TODO.md
cmake/: option_for_setting_install_dir_prefix.cmake  set_library_bin_output_naming_format.cmake  set_project_dependencies.cmake  set_relative_install_paths.cmake
examples/: external_unicode_signaler.cpp  server-example.cpp
examples/unikey-server-example/: CMakeLists.txt  unikey_server_example.cpp
files/: io.unikey.Device.conf  io.unikey.conf
include/: BitField.hpp  BlueZ_Interface.hpp  Cyclic_Queue.hpp  Device.hpp  Key_Device.hpp  Shared_Cyclic_Queue.hpp  Virtual_Device.hpp  WiFi_Client.hpp  WiFi_Server.hpp  bluetooth_configs.hpp  shm_unikey.hpp  unikey.hpp
scripts/: set_group_id  unikey_connect_to.sh  unikey_exit.sh  unikey_timeout_set.sh  unikey_toggle_server.sh  unikey_trigger.sh
src/: BitField.cpp  BlueZ_Interface.cpp  Cyclic_Queue.cpp  Device.cpp  Key_Device.cpp  Virtual_Device.cpp  WiFi_Client.cpp  WiFi_Server.cpp  main.cpp  shm_unikey.cpp  unikey.cpp  unikey_client.cpp  unikey_server.cpp
